--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,8 +26,9 @@
         <item name="android:layout_width">50dp</item>
         <item name="android:layout_height">50dp</item>
         <item name="android:background">@drawable/bg_rrss_icons</item>
-        <item name="android:scaleType">center</item>
+        <item name="android:scaleType">centerInside</item>
         <item name="android:layout_margin">5dp</item>
+        <item name="android:adjustViewBounds">true</item>
         <item name="tint">@color/white</item>
     </style>
 
