--- a/app/src/main/res/layout/activity_novelty_detail.xml
+++ b/app/src/main/res/layout/activity_novelty_detail.xml
@@ -39,7 +39,8 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:maxHeight="200dp"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                android:contentDescription="@string/novelty_image"/>
 
 
             <TextView
