--- a/app/src/main/res/layout/view_gallery_item.xml
+++ b/app/src/main/res/layout/view_gallery_item.xml
@@ -12,5 +12,6 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:background="@color/white"/>
+        android:background="@color/white"
+        android:contentDescription="@string/gallery_image"/>
 </LinearLayout>
