--- a/app/src/main/res/layout/activity_entity_info.xml
+++ b/app/src/main/res/layout/activity_entity_info.xml
@@ -44,6 +44,7 @@
                         android:layout_marginStart="20dp"
                         android:adjustViewBounds="true"
                         android:background="@drawable/bg_circle_orange"
+                        android:contentDescription="@string/entity_logo"
                         android:padding="3dp"
                         android:src="@mipmap/img_entitiy_example" />
 
@@ -62,6 +63,7 @@
                     android:id="@+id/tv_entity_description"
                     style="@style/TextBase"
                     tools:text="Descripcón larga\nDescripcón larga\nDescripcón larga"
+                    android:layout_marginTop="7dp"
                     android:paddingLeft="12dp"
                     android:paddingRight="12dp" />
 
@@ -69,10 +71,11 @@
                     android:id="@+id/tv_title_services"
                     style="@style/TextBase.Purple"
                     android:text="@string/products_and_services"
-                    android:layout_marginStart="4dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginBottom="7dp"
                     android:textSize="@dimen/text_medium"
                     android:textStyle="bold"
-                    android:layout_marginTop="12dp"/>
+                    android:layout_marginTop="0dp"/>
 
                 <TextView
                     android:id="@+id/tv_entity_services"
@@ -88,6 +91,14 @@
                     android:orientation="vertical"
                     android:padding="12dp">
 
+
+                    <TextView
+                        style="@style/TextBase.Purple"
+                        android:text="@string/contact"
+                        android:textSize="@dimen/text_medium"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="7dp"/>
+
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -98,22 +109,26 @@
                             android:id="@+id/btn_rrss_web"
                             style="@style/BtnEntityInfo"
                             android:src="@mipmap/ic_web"
+                            android:contentDescription="@string/visit_website"
                             android:padding="10dp"/>
 
                         <ImageView
                             android:id="@+id/btn_rrss_email"
                             style="@style/BtnEntityInfo"
-                            android:src="@mipmap/ic_nav_email" />
+                            android:src="@mipmap/ic_nav_email"
+                            android:contentDescription="@string/send_email_to_entity"/>
 
                         <ImageView
                             android:id="@+id/btn_rrss_phone"
                             style="@style/BtnEntityInfo"
+                            android:contentDescription="@string/dial_phone_entity"
                             android:src="@drawable/ic_phone" />
 
                         <ImageView
                             android:id="@+id/btn_rrss_map"
                             style="@style/BtnEntityInfo"
                             android:src="@mipmap/ic_map_marker2"
+                            android:contentDescription="@string/entity_map_location"
                             android:padding="10dp"/>
                     </LinearLayout>
 
@@ -139,7 +154,7 @@
 
                     <TextView
                         style="@style/TextBase.Purple"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginEnd="16dp"
                         android:layout_weight="1"
                         android:text="@string/distintivo_info" />
 
@@ -150,7 +165,8 @@
                         android:layout_gravity="center_horizontal"
                         android:layout_marginBottom="30dp"
                         android:adjustViewBounds="true"
-                        app:srcCompat="@mipmap/img_distntivo_balance" />
+                        app:srcCompat="@mipmap/img_distntivo_balance"
+                        android:contentDescription="@string/balance_badge"/>
                 </LinearLayout>
 
                 <LinearLayout
