--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:src="@mipmap/img_mes_header" />
+            android:src="@mipmap/img_mes_header"
+            android:contentDescription="@null"/>
 
         <LinearLayout
             android:layout_width="match_parent"
