--- a/app/src/main/res/layout/fragment_intro_first_item.xml
+++ b/app/src/main/res/layout/fragment_intro_first_item.xml
@@ -11,6 +11,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="60dp"
-        android:src="@mipmap/img_cover_start" />
+        android:src="@mipmap/img_cover_start"
+        android:contentDescription="@string/intro_first_item"/>
 
 </FrameLayout>
