--- a/app/src/main/res/layout/fragment_member_card.xml
+++ b/app/src/main/res/layout/fragment_member_card.xml
@@ -95,12 +95,13 @@
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:adjustViewBounds="true"
-                app:srcCompat="@mipmap/ic_avatar_2" />
+                app:srcCompat="@mipmap/ic_avatar_2"
+                android:contentDescription="@string/profile_image"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
 
@@ -159,7 +160,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:adjustViewBounds="true"
-                android:minHeight="200dp" />
+                android:minHeight="200dp"
+                android:contentDescription="@string/member_card_qr"/>
 
         </FrameLayout>
 
@@ -170,6 +172,7 @@
             android:layout_marginTop="20dp"
             android:layout_weight="1"
             android:adjustViewBounds="true"
-            app:srcCompat="@mipmap/img_mes_header" />
+            app:srcCompat="@mipmap/img_mes_header"
+            android:contentDescription="@null"/>
     </LinearLayout>
 </LinearLayout>
