--- a/app/src/main/res/layout/view_progress_etics.xml
+++ b/app/src/main/res/layout/view_progress_etics.xml
@@ -8,6 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:src="@mipmap/ic_app_mes_only_circle"/>
+        android:src="@mipmap/ic_app_mes_only_circle"
+        android:contentDescription="@string/loading_data"/>
 
 </RelativeLayout>
