--- a/app/src/main/res/layout/view_progress_mes.xml
+++ b/app/src/main/res/layout/view_progress_mes.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -16,7 +17,8 @@
             android:layout_marginBottom="20dp"
             android:adjustViewBounds="true"
             android:src="@mipmap/img_logo_mes_letters"
-            android:tint="@color/white" />
+            app:tint="@color/white"
+            android:contentDescription="@string/loading_data"/>
 
         <net.mercadosocial.moneda.views.RotativeImageView style="@style/ProgressMES" />
     </LinearLayout>
