- completadas las traducciones a euskera - arregldo bug en la carga de datos después de las pantallas de intro

--- a/app/src/main/res/layout/fragment_filter_entities.xml
+++ b/app/src/main/res/layout/fragment_filter_entities.xml
@@ -33,7 +33,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:hint="@string/semantic_search"
+                    android:hint="@string/search"
                     android:textSize="@dimen/text_large"
                     android:inputType="textFilter" />
 
